# DZ_09_Scrapy

./: authors.json  main.py  models.py  pyproject.toml
