[tool.poetry]
name = "dz-09-scrapy"
version = "0.1.0"
description = ""
authors = ["kostjavovhc <kostjavovhc@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
scrapy = "^2.11.0"
playwright = "^1.41.2"
beautifulsoup4 = "^4.12.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
